; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_ed.init.c_ed_set_tty_eight_bit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_ed.init.c_ed_set_tty_eight_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SHTTY = common dso_local global i32 0, align 4
@extty = common dso_local global i32 0, align 4
@Tty_eight_bit = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ed_set_tty_eight_bit() #0 {
  %1 = load i32, i32* @SHTTY, align 4
  %2 = call i32 @tty_getty(i32 %1, i32* @extty)
  %3 = icmp eq i32 %2, -1
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %7

5:                                                ; preds = %0
  %6 = call i32 @tty_geteightbit(i32* @extty)
  store i32 %6, i32* @Tty_eight_bit, align 4
  br label %7

7:                                                ; preds = %5, %4
  ret void
}

declare dso_local i32 @tty_getty(i32, i32*) #1

declare dso_local i32 @tty_geteightbit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
